**chore(backend): enhance Maven dependency management, profiles, and tooling updates**
- **Dependency Management:**
  - Centralized dependency alignment using `dependencyManagement` to enforce consistent versions and avoid vulnerabilities.
  - Integrated `com.google.cloud:libraries-bom` for managing transitive dependencies of Google Cloud libraries.
  - Pinned critical dependencies explicitly to reduce version conflicts (`protobuf-java`, `guava`, `google-http-client`, etc.).

- **Version Updates:**
  - Updated numerous library versions for performance, compatibility, and security, including:
    - `google-cloud-secretmanager` from 2.80.0 to 2.43.0.
    - `resilience4j` from 2.2.0 to 2.3.0.
    - `logstash-logback-encoder` from 7.3 to 7.4.
    - `graphql-java-extended-scalars` from 21.0 to 22.0.
    - `firebase-admin` from 9.2.0 to 9.3.0.
    - `commons-codec` from 1.16.0 to 1.17.1.
  - Upgraded project parent `spring-boot-starter-parent` from 3.4.3 to 3.4.7.

- **Profiles and Optional Configurations:**
  - Added a `dev` profile with H2 database setup for local development to simplify runtime and reduce Postgres reliance.
  - Introduced an `owasp` profile for optional OWASP dependency checks.

- **Tooling Enhancements:**
  - Integrated `maven-enforcer-plugin` with rules for dependency convergence, Maven version, and Java version enforcement.
  - Enhanced Maven configuration for reproducible builds and improved visibility of configuration discrepancies.

- **Frontend and General Changes:**
  - Updated `dev` script in frontend `package.json` to remove dynamic port resolution, explicitly binding to `8080`.
  - Adjusted GitHub CI/CD workflow Maven test command to include `-U` for updated snapshots.
  - Fixed `next-env.d.ts` path for correct route type resolution in Next.js.

- **New Files:**
  - Added `application-dev.yml` for Spring Boot dev profile configuration, improving debug settings and H2 runtime setup.

These changes improve dependency consistency, simplify loca

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Build & Test (Maven)
         working-directory: backend
-        run: mvn -B -DskipTests=false verify
+        run: mvn -U -B -DskipTests=false verify
 
   test-frontend:
     runs-on: ubuntu-latest
